# MinutesX

./: .env.example  MinutesX_Project_Description.md  README.md  config.py  demo.py  demo_transcript.txt  main.py  pyproject.toml  requirements.txt
MinutesX/: .env.template  .gitignore  README.md
MinutesX/a2a/: message_bus.py
MinutesX/agents/: __init__.py  action_agent.py  classifier_agent.py  orchestrator_agent.py  summary_agent.py
MinutesX/memory/: __init__.py  memory_bank.py
MinutesX/session/: __init__.py  session_service.py
MinutesX/tools/: search_tool.py
a2a/: __init__.py  protocol.py
agents/: caption_agent.py  memory_agent.py  reviewer_agent.py
memory/: context_compactor.py
observability/: __init__.py  logger.py  metrics.py  tracer.py
output/: ai_caption.txt  ai_notes.txt  ai_summary.txt  transcript_20251201_195456.txt
tools/: __init__.py  audio_capture.py  live_transcription.py  meet_transcript_tool.py  speaker_identifier.py  task_publisher.py
