[project]
name = "minutesx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "aioredis>=2.0.1",
    "asyncio>=4.0.0",
    "bert-score>=0.3.13",
    "black>=25.11.0",
    "chromadb>=1.3.5",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.123.0",
    "google-adk>=1.18.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-aiplatform>=1.128.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "jira>=3.10.5",
    "mypy>=1.19.0",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "prometheus-client>=0.23.1",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "rich>=14.2.0",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.1.2",
    "slack-sdk>=3.39.0",
    "sounddevice>=0.5.3",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]
